testsuite/poke.pkl/struct-types-diag-6.pk
/* { dg-do compile } */

/* Struct elements can't have duplicated names.
   Version with declarations.  */

type Packet = struct
 {
   var foo = 10;
   long bar;
   string foo;  /* { dg-error "" } */
 };
